fix: appraisal symbol alignment

--- a/gui/src/app/pages/message-page/message-tree/message-tree.component.scss
+++ b/gui/src/app/pages/message-page/message-tree/message-tree.component.scss
@@ -96,6 +96,7 @@ mat-tree-node {
 }
 
 .appraisal-symbol {
+  flex-shrink: 0;
   font-weight: bold;
   width: 48px; // icon width for alignment
   text-align: center;
